tests/negative/meta_size_float.urb
n = 1 0,
n.size = 1.5,
